--- a/FanPage-SU/estevão-site/style.css
+++ b/FanPage-SU/estevão-site/style.css
@@ -29,14 +29,17 @@
     font-weight: 400;
 }
 
-.apresentacao{
+.bem_vindos{
     height: 100vh;
     width: 100vw;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: rgb(255, 238, 218);
 }
 
 .apresentacao h1{
-    padding-left: 13vw;
+    padding-left: 11vw;
     padding-top: 10vh;
     color: rgb(0, 29, 194);
     font-size: 4rem;
@@ -50,7 +53,7 @@
     font-family: "Concert One", sans-serif;
     font-weight: 400;
     width: 40vw;
-    margin-left: 5vw;
+    margin-left: 2vw;
     text-align: justify;
 }
 .apresentacao p{
@@ -59,7 +62,7 @@
     font-family: "Concert One", sans-serif;
     font-weight: 400;
     width: 40vw;
-    margin-left: 5vw;
+    margin-left: 2vw;
 }
 .apresentacao ol{
     color: rgb(0, 0, 0);
@@ -68,5 +71,5 @@
     font-weight: 400;
     width: 40vw;
     margin-left: 5vw;
-    padding-left: 3vw;
+    padding-left: 2vw;
 }
